--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,74 @@
 services:
 
-    db:
-        restart: unless-stopped
-        container_name: rdan_db
-        # Can be shortened with ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
-        build: ./postgres
-        # To test on a host machine set ports to 5432:5432 to allow external connections
-        ports:
-            - 5432:5432
-        environment:
-            POSTGRES_USER : postgres
-            POSTGRES_PASSWORD : Uiu6^tFRFVMwiJQNQn3Z9sCEbS^HiNQPnGpAN!d!2LHY&@6#tvL3et^Skqe%ds5K
-            POSTGRES_DB : postgres
-            PGDATA: /var/lib/postgresql/data/pgdata
-        volumes:
-            - type: volume
-              source: rdan-db
-              target: /var/lib/postgresql/data
+  db:
+    restart: unless-stopped
+    container_name: rdan_db
+    # Can be shortened with ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
+    build: ./postgres
+    # To test on a host machine set ports to 5432:5432 to allow external connections
+    #ports:
+      # - 5432:5432
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
+      POSTGRES_DB: postgres
+      PGDATA: /var/lib/postgresql/data/pgdata
+    volumes:
+      - type: volume
+        source: rdan-db
+        target: /var/lib/postgresql/data
 
-    #lavalink:
-    #    container_name: rdan_lavalink
-    #    restart: always
-    #    image: fredboat/lavalink:master
-    #    volumes:
-    #        - ./application.yml:/opt/Lavalink/application.yml
+  #lavalink:
+  #  container_name: rdan_lavalink
+  #  restart: always
+  #  image: fredboat/lavalink:master
+  #  volumes:
+  #    - ./application.yml:/opt/Lavalink/application.yml
 
-    bot:
-        restart: unless-stopped
-        container_name: rdan_bot
-        build: .
-        depends_on:
-            - db
-        env_file:
-          - .env
+  sonarr:
+    restart: unless-stopped
+    container_name: rdan_sonarr
+    image: lscr.io/linuxserver/sonarr:latest
+    volumes:
+      - /home/dan/robo-dan/servarr/config/sonarr:/config
+      - /home/dan/robo-dan/servarr/data:/data
+    environment:
+      - PUID=1000
+      - PGID=1000
+    ports:
+      - 28600:8989
+
+  sabnzbd:
+    restart: unless-stopped
+    image: lscr.io/linuxserver/sabnzbd:latest
+    container_name: rdan_sabnzbd
+    environment:
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - /home/dan/robo-dan/servarr/config/sabnzbd:/config
+      - /home/dan/robo-dan/servarr/data/usenet:/data/usenet
+    ports:
+      - 28700:8080
+    expose:
+      - 8080
+
+  bot:
+    restart: unless-stopped
+    container_name: rdan_bot
+    build: .
+    volumes:
+      # allows us to access files downloaded from sonarr
+      - /home/dan/robo-dan/servarr/data:/data
+    depends_on:
+      - db
+    env_file:
+      - .env
+    command:
+      [
+        "python3",
+        "main.py"
+      ]
 
 volumes:
- rdan-db:
+  rdan-db:
