--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,12 @@ mystbin-py = "^5.0.2"
 orjson = "^3.8.0"
 uvloop = { version = "^0.17.0", markers = "sys_platform == 'linux'" }
 humanize = "^4.3.0"
-wavelink = "^1.3.2"
 aiob2 = {git = "https://github.com/Void-ux/aiob2.git", rev = "master"}
 beautifulsoup4 = "^4.11.1"
+pytz = "^2023.3.post1"
+line-profiler = "^4.1.1"
+lru-dict = "^1.2.0"
+lxml = "^4.9.3"
 
 [tool.poetry.dev-dependencies]
 
@@ -37,3 +40,6 @@ typeCheckingVersion = "off"
 pythonVersion = "3.10"
 reportUnusedImport = "error"
 reportUnnecessaryTypeIgnoreComment = "error"
+
+[tool.ruff]
+line-length = 125
