--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,9 @@ services:
     restart: unless-stopped
     container_name: rdan_db
     # Can be shortened with ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
-    build: ./postgres
+    ports:
+      - 127.0.0.1:32400:5432
+    image: library/postgres:14.2
     env_file:
       - ./postgres/.env
     volumes:
