--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,31 +13,31 @@ services:
         source: rdan-db
         target: /var/lib/postgresql/data
 
-  sonarr:
-    restart: unless-stopped
-    container_name: rdan_sonarr
-    image: lscr.io/linuxserver/sonarr:latest
-    volumes:
-      - /home/dan/robo-dan/servarr/config/sonarr:/config
-      - /home/dan/robo-dan/servarr/data:/data
-    environment:
-      - PUID=1000
-      - PGID=1000
-    ports:
-      - 127.0.0.1:28600:8989
+  # sonarr:
+  #   restart: unless-stopped
+  #   container_name: rdan_sonarr
+  #   image: lscr.io/linuxserver/sonarr:latest
+  #   volumes:
+  #     - /home/dan/robo-dan/servarr/config/sonarr:/config
+  #     - /home/dan/robo-dan/servarr/data:/data
+  #   environment:
+  #     - PUID=1000
+  #     - PGID=1000
+  #   ports:
+  #     - 127.0.0.1:28600:8989
 
-  sabnzbd:
-    restart: unless-stopped
-    image: lscr.io/linuxserver/sabnzbd:latest
-    container_name: rdan_sabnzbd
-    environment:
-      - PUID=1000
-      - PGID=1000
-    volumes:
-      - /home/dan/robo-dan/servarr/config/sabnzbd:/config
-      - /home/dan/robo-dan/servarr/data/usenet:/data/usenet
-    ports:
-      - 127.0.0.1:28700:8080
+  # sabnzbd:
+  #   restart: unless-stopped
+  #   image: lscr.io/linuxserver/sabnzbd:latest
+  #   container_name: rdan_sabnzbd
+  #   environment:
+  #     - PUID=1000
+  #     - PGID=1000
+  #   volumes:
+  #     - /home/dan/robo-dan/servarr/config/sabnzbd:/config
+  #     - /home/dan/robo-dan/servarr/data/usenet:/data/usenet
+  #   ports:
+  #     - 127.0.0.1:28700:8080
 
   bot:
     restart: unless-stopped
