--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,8 @@ services:
         source: ./postgres
         target: /main/postgres
         read_only: true
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 volumes:
   rdan-db:
