--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,6 @@ services:
   db:
     restart: unless-stopped
     container_name: rdan_db
-    ports:
-      - 127.0.0.1:32800:5432
     image: library/postgres:17.2
     env_file:
       - ./postgres/.env
@@ -12,32 +10,9 @@ services:
       - type: volume
         source: rdan-db
         target: /var/lib/postgresql/data
-
-  # sonarr:
-  #   restart: unless-stopped
-  #   container_name: rdan_sonarr
-  #   image: lscr.io/linuxserver/sonarr:latest
-  #   volumes:
-  #     - /home/dan/robo-dan/servarr/config/sonarr:/config
-  #     - /home/dan/robo-dan/servarr/data:/data
-  #   environment:
-  #     - PUID=1000
-  #     - PGID=1000
-  #   ports:
-  #     - 127.0.0.1:28600:8989
-
-  # sabnzbd:
-  #   restart: unless-stopped
-  #   image: lscr.io/linuxserver/sabnzbd:latest
-  #   container_name: rdan_sabnzbd
-  #   environment:
-  #     - PUID=1000
-  #     - PGID=1000
-  #   volumes:
-  #     - /home/dan/robo-dan/servarr/config/sabnzbd:/config
-  #     - /home/dan/robo-dan/servarr/data/usenet:/data/usenet
-  #   ports:
-  #     - 127.0.0.1:28700:8080
+    ports:
+      # Docker, by default, binds to 0.0.0.0 :/
+      - 127.0.0.1:32800:5432
 
   bot:
     restart: unless-stopped
@@ -62,8 +37,6 @@ services:
         source: ./postgres
         target: /main/postgres
         read_only: true
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
 
 volumes:
   rdan-db:
