--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,5 @@
 [tool.pyright]
 typeCheckingVersion = "basic"
-pythonVersion = "3.10"
 reportUnusedImport = "error"
 reportUnnecessaryTypeIgnoreComment = "error"
 
@@ -30,7 +29,6 @@ dependencies = [
     "click>=8.1.7",
     "aiob2>=0.8.4",
     "Pillow>=10.4.0",
-    "toml>=0.10.2",
     "aiohttp>=3.9.5",
     "asyncpg>=0.29.0",
     "psutil>=6.0.0",
@@ -48,8 +46,9 @@ dependencies = [
     "lxml>=5.2.2",
     "discord-py>=2.4.0",
     "ffmpeg-python>=0.2.0",
+    "colorama>=0.4.6",
 ]
-requires-python = ">=3.10.*"
+requires-python = "==3.12.*"
 readme = "README.md"
 license = {text = "MIT"}
 
